# am-wordlist

./: Cargo.toml  LICENSE  README.md  build.rs  update-wordlist.sh
src/: lib.rs  main.rs  wordlist.txt  wordlist_size10.txt  wordlist_size15.txt  wordlist_size5.txt
