[package]
name = "am-word"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
# Embed a smaller, evenly-sampled subset instead of the full list.
# NOTE: these are sampled across the alphabetical list for size only — they are
# NOT frequency-ranked "common word" lists. Enable at most one; smallest wins.
size-5 = []   # ~5,000 words
size-10 = []  # ~10,000 words
size-15 = []  # ~15,000 words

[dependencies]
